--- a/README.org
+++ b/README.org
@@ -27,10 +27,10 @@ are built-in as of Emacs 25)/. This can be accomplished using =M-x list-packages
 [[https://github.com/larsmagne/meme.el][Meme.el]] is not officially part of MELPA [[https://lists.gnu.org/archive/html/emacs-devel/2016-06/msg00848.html][yet]], so the easiest way
 to install it is to clone the repository and add it to your Emacs load
 path,
-
-~$ cd /path/to/src~
-~$ git clone https://github.com/larsmagne/meme.el~
-
+#+BEGIN_SRC shell
+$ cd /path/to/src
+$ git clone https://github.com/larsmagne/meme.el
+#+END_SRC
 * Configuration
 Then in your ~init.el~ add the following:
 
