--- a/README.org
+++ b/README.org
@@ -1,3 +1,4 @@
+* Table of Contents                                                     :TOC:
 * Dependencies
 ** Emacs Version
 To use this library, you need the Emacs master trunk from the 30th of
